--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
     "reflect-metadata": "^0.1.13",
