--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
+    "passport-cookie": "^1.0.9",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
